fix vertical spacing bug for right click menu

--- a/css/app/rightMenu.css
+++ b/css/app/rightMenu.css
@@ -5,7 +5,8 @@
     cursor: pointer;
     border: 0.18rem black solid;
     border-radius: 2px;
-    width: 200px;
+    min-width: 200px;
+    width: fit-content;
 }
 
 #ctxmenu > h4{
@@ -14,6 +15,8 @@
     border-bottom: 0.18rem solid black;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    gap: 10px;
 }
 
 #ctxmenu > p{
